--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Base from "../layouts/Base.astro";
+import "../styles/global.css";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<Base>
+  <p class="p-4">
+    El pasado martes 6 de mayo del 2024 se llevo a cabo el examen filtro local
+    de la FCAeI para el maratón de conocimientos ANFECA 2025 en el área de
+    Informática Administrativa
+  </p>
+</Base>
